infra/k8s/client-depl.yaml
# Config for creating pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 #Number of pod running (scaling)
  selector: #Find all the containers with the label "client"
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mathiasbergqvist/client:latest
---
# Config for cluster ip service
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3001
      targetPort: 3001
