infra/k8s/comments-depl.yaml
# Config for creating pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 #Number of pod running (scaling)
  selector: #Find all the containers with the label "comments"
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: mathiasbergqvist/comments:latest
---
# Config for cluster ip service
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
