infra/k8s/event-bus-depl.yaml
# Config for creating pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 #Number of pod running (scaling)
  selector: #Find all the containers with the label "event-bus"
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: mathiasbergqvist/event-bus:latest
---
# Config for cluster ip service
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
