infra/k8s/moderation-depl.yaml
# Config for creating pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 #Number of pod running (scaling)
  selector: #Find all the containers with the label "moderation"
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: mathiasbergqvist/moderation:latest
---
# Config for cluster ip service
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
