infra/k8s/query-depl.yaml
# Config for creating pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 #Number of pod running (scaling)
  selector: #Find all the containers with the label "query"
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: mathiasbergqvist/query:latest
---
# Config for cluster ip service
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
